javascript is almost done but broken in some parts, like appending topics to new buttons and a few others, will fix after i take a break

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,3 +65,7 @@ body {
     opacity: 1;
     right: 0;
   }
+
+  #bikes {
+    border: 5px dotted red;
+  }
